# no_std_io_rs

./: .gitignore  Cargo.toml  README.md
src/: buffer_reader.rs  buffer_writer.rs  buffered_reader.rs  compressed_reader.rs  compressed_writer.rs  dynamic_error.rs  gz_header.rs  lib.rs  no_std_io.rs  reader_buffered.rs  reader_bytewise.rs  reader_compressed.rs  reader_exact.rs  reader_slice.rs  tar_gz_create.rs  tar_gz_extract.rs  writer_buffer.rs  writer_buffered.rs  writer_bytewise.rs  writer_compressed.rs
src/core_streams/: bi_cursor.rs  bi_empty.rs  mod.rs  reader_buffered.rs  reader_bytewise.rs  reader_forked_buffered.rs  reader_limited.rs  rw_empty.rs  writer_buffered.rs  writer_bytewise.rs  writer_limited.rs
src/extended_streams/: mod.rs
src/extended_streams/compression/: gz_container.rs  reader_compressed.rs  writer_compressed.rs
src/extended_streams/tar/: confident_value.rs  gnu_sparse_1_0_parser.rs  mod.rs  parser_options.rs  parsing_errors.rs  pax_parser.rs  sparse_format.rs  tar_constants.rs  tar_inode.rs  tar_parser.rs  tar_violations.rs
src/extended_streams/tar/tar_test/: create_archives.bash  mod.rs  mod_old.rs  test-gnu-nosparse.tar  test-gnu-oldsparse.tar  test-gnu-sparse-0.0.tar  test-gnu-sparse-0.1.tar  test-gnu-sparse-1.0.tar  test-pax.tar  test-ustar.tar  test-v7.tar
src/extended_streams/tar/tar_test/test-archive/: sparse_test_file.txt
src/limited_collections/: limited_hash_map.rs  mod.rs
src/no_std_io/: empty.rs  mod.rs  no_std_io.rs  reader_buffered.rs  reader_bytewise.rs  reader_compressed.rs  reader_exact.rs  reader_limited.rs  reader_slice.rs  writer_buffer.rs  writer_buffered.rs  writer_bytewise.rs  writer_compressed.rs  writer_limited.rs  writer_null.rs  writer_slice.rs
src/no_std_io/core_streams/: bi_cursor.rs  reader_buffered.rs  writer_buffered.rs  writer_limited.rs
src/no_std_io/extended_streams/compression/: mod.rs
src/no_std_io/extended_streams/tar/: confident_value.rs  mod.rs  pax_parser.rs  tar_constants.rs  tar_inode.rs  tar_parser.rs
src/no_std_io/extended_streams/tar/tar_test/: test-gnu-nosparse.tar  test-gnu-sparse-0.1.tar  test-ustar.tar
src/no_std_io/streams/: bi_cursor.rs  bi_cursor_mut.rs  bi_empty.rs  mod.rs  reader_buffered.rs  reader_bytewise.rs  reader_forked_buffered.rs  reader_limited.rs  writer_limited.rs
src/no_std_io/traits/: backing_buffer.rs  buffered_read.rs  copy.rs  read.rs  read_all.rs  seek.rs  write.rs  write_all.rs
src/tar_gz/: file_entry.rs  gz_container.rs  gz_header.rs  mod.rs  tar_constants.rs  tar_gz_extract.rs  tar_header_ustar.rs  tar_inode.rs
src/tar_gz/legacy/: tar_gz_extract.rs
src/tar_gz/tar_test/: create_archives.bash  test-gnu-nosparse.tar  test-gnu-sparse-0.0.tar  test-gnu.tar  test-pax.tar  test-ustar.tar  test-v7.tar
src/tar_gz/tar_test/test-archive/: .gitignore  sparse_test_file.txt
src/traits/: backing_buffer.rs  buffered_read.rs  copy.rs  limited_vec.rs  mod.rs  read.rs  read_all.rs  unwrap_infallible.rs  write.rs  write_all.rs
